--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,15 @@
 {
   "vendor": "hiringcoders2021",
-  "name": "vtexidelfonso",
-  "version": "0.0.0",
+  "name": "vtexawsidelfonso",
+  "version": "0.0.1",
   "builders": {
     "styles": "2.x",
     "store": "0.x",
-    "docs": "0.x"
+    "docs": "0.x",
+    "assets": "0.x",
+    "react": "3.x"
   },
+  "mustUpdateAt": "2021-08-17",
   "scripts": {
     "postreleasy": "vtex publish --verbose"
   },
@@ -49,8 +52,18 @@
     "vtex.product-price": "1.x",
     "vtex.store-link": "0.x",
     "vtex.condition-layout": "1.x",
-    "vtex.countdown": "0.x",
-    "vtex.category-menu": "2.x"
+    "vtex.category-menu": "2.x",
+    "vtex.store-image": "0.x",
+    "vtex.store-icons": "0.x",
+    "vtex.store-video": "1.x",
+    "vtex.product-gifts": "0.x",
+    "vtex.disclosure-layout": "1.x",
+    "vtex.store-form": "0.x",
+    "vtex.product-highlights": "2.x",
+    "vtex.product-specifications": "1.x",
+    "vtex.css-handles": "1.x",
+    "vtex.product-list": "0.x",
+    "vtex.shelf-components": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
