--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -2,14 +2,17 @@
   "header": {
     "blocks": ["header-layout.desktop", "header-layout.mobile"]
   },
+
   "header.full": {
     "blocks": ["header-layout.desktop", "header-layout.mobile"]
   },
+
   "header-layout.desktop": {
     "children": [
       "sticky-layout#desktop"
     ]
   },
+
   "sticky-layout#desktop": {
     "props": {
       "blockClass": "sticky-header"
@@ -18,6 +21,7 @@
   },
   "flex-layout.row#desktop": {
     "props": {
+      "blockClass": "main-header",
       "horizontalAlign": "center",
       "verticalAlign": "center",
       "preventHorizontalStretch": true,
@@ -27,31 +31,83 @@
     "children": [
       "flex-layout.col#logo-desktop",
       "flex-layout.col#spacer",
-      "search-bar",
-      "locale-switcher",
-      "login",
+      "search-bar#homedesk",
+      "flex-layout.col#spacer",
+      "flex-layout.col#entrardesktop",
+      "flex-layout.col#suportedesktop",
       "minicart.v2"
     ]
   },
+
   "flex-layout.col#spacer": {
     "props": {
       "width": "grow"
     }
   },
+
+  "search-bar#homedesk": {
+    "props": {
+      "blockClass": "searchbar1"
+    }
+  },
+
   "flex-layout.col#logo-desktop": {
     "props": {
-      "verticalAlign": "middle"
+      "verticalAlign": "middle",
+      "position": "left"
     },
+
     "children": ["logo"]
   },
   "logo": {
     "props": {
       "title": "Logo",
       "href": "/",
-      "url": "https://brand.vtex.com/static/media/VTEX_pink_RGB.751a9fb5.svg",
-      "width": "80"
+      "url": "https://maratonavirtual.s3.sa-east-1.amazonaws.com/upmedal.png",
+      "width": 132,
+      "height": 32,
+      "mobileWidth": 90,
+      "mobileHeight": 32
+
     }
   },
+
+  "flex-layout.col#entrardesktop":{
+    "props":{
+      "horizontalAlign": "center"
+    },
+    "children":[
+        "image#login1"
+    ]
+  },
+  "image#login1": {
+    "props": {
+      "blockClass":"imglogin",
+      "width": 20,
+      "src": "assets/login.png",
+      "link": "/"
+    }
+  },
+
+  "flex-layout.col#suportedesktop":{
+    "props":{
+      "horizontalAlign": "center"
+    },
+    "children":[
+        "image#suporte1"
+    ]
+  },
+  "image#suporte1": {
+    "props": {
+      "blockClass":"imgcontato",
+      "width": 20,
+      "src": "assets/contato.png",
+      "link": {
+        "url": "https://api.whatsapp.com/send?phone=5511953527428&text=HiringCoders2021"
+      }
+    }
+  },
+
   "header-layout.mobile": {
     "children": ["sticky-layout#mobile"]
   },
@@ -60,10 +116,8 @@
   },
   "flex-layout.row#mobile": {
     "children": [
-      "drawer",
-      "logo",
-      "flex-layout.col#spacer",
-      "login",
+      "flex-layout.col#logomobile",
+      "search-bar#homemobi",
       "minicart.v2"
     ],
     "props": {
@@ -73,7 +127,30 @@
       "fullWidth": true
     }
   },
-  "drawer": {
-    "children": []
+
+  "flex-layout.col#logomobile": {
+    "props": {
+      "verticalAlign": "middle",
+      "position": "left"
+    },
+
+    "children": ["logo"]
+  },
+  "logo": {
+    "props": {
+      "title": "Logo",
+      "href": "/",
+      "url": "https://maratonavirtual.s3.sa-east-1.amazonaws.com/upmedal.png",
+      "width": 132,
+      "height": 32,
+      "mobileWidth": 90,
+      "mobileHeight": 32
+    }
+  },
+
+  "search-bar#homemobi": {
+    "props": {
+     "blockClass":"searchbar2"
+    }
   }
 }
