--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,302 +1,148 @@
-//02-Basic Layout
 {
-  "store.home": { //PAI
+  "store.home": { 
     "blocks": [
-      "category-menu",
-      "rich-text",//bloco //filho do store.home
-      "info-card#button-right",//# - nomea como um elemento unico
-      "info-card#button-left",
-      "__fold__",
-      "rich-text#aula03",//03-Layout Block
-      "slider-layout#home",
-      "flex-layout.row",
-      "responsive-layout.desktop#desktop",
-      "responsive-layout.mobile#mobile",
-      "tab-layout#home",
-      "modal-trigger#first",
-      "list-context.product-list",
-      "stack-layout#cta"
+      "tab-layout"
+    ]
+  },
+  
+  "tab-layout": {
+    "children": [
+      "tab-list",
+      "slider-layout#banner",
+      "tab-content"
     ]
   },
 
-  "rich-text": { //declaração dos blocos 02
-    "props": { 
-      "text": "# VTEX Jaqueline \n ##  02-Basic Layout",
-      "textPosition": "CENTER",
-      "textAlignment":"center"
-    }
-  },
-
-  "info-card": {
-    "props": {
-      "isFullModeStyle": false,//Se a imagem pega a tela inteira ou não 02
-      "textPosition": "right",
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
-      "headline": "Vintage Pink",
-      "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
-      "callToActionMode": "button",
-      "callToActionText": "Explore",
-      "callToActionUrl": "/sale/d",
-      "textAlignment": "center"
-    }
-  },
-
-  "info-card#button-right": {
-    "props": {
-      "isFullModeStyle": false,
-      "textPosition": "right",
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
-      "headline": "Vintage Pink",
-      "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
-      "callToActionMode": "button",
-      "callToActionText": "Explore",
-      "callToActionUrl": "/sale/d",
-      "textAlignment": "center"
-    }
-  }, 
-
-  "info-card#button-left": {
-    "props": {
-    "isFullModeStyle": false,
-    "textPosition": "left",
-    "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
-    "headline": "Shining chrome",
-    "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
-    "callToActionMode": "link",
-    "callToActionText": "Go to collection",
-    "textAlignment": "center"
-    }
-  },
-
-  //03-Layout Block
-  "rich-text#aula03": { 
-    "props": { 
-      "text": "## Aula 03-Layout Block",
-      "textPosition": "CENTER"
-    }
-  },
-//Flex-layout (Organiza elementos de uma pagina Html dentro de seus containers de forma dinamica) 03
-  "flex-layout.row":{
-    "children": [ //filho do flex-layout.row
-      "info-card#rethink",
-      "flex-layout.col"
+  "tab-list": {
+    "children": [
+      "tab-list.item#home1",
+      "tab-list.item#home2",
+      "tab-list.item#home3",
+      "tab-list.item#home4",
+      "tab-list.item#home5"
     ]
   },
 
-  "flex-layout.col": {
-    "children": ["image#electronics", "image#major-appliance"]
-  },
-
-  "image#electronics": {
-    "props": {
-      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/electronics_banner___25d69b49f8224b369375e68513b4d593.png",
-      "maxWidth": "100%"
-    }
-  },
-
-  "image#major-appliance": {
-    "props": {
-      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/major_appliance_banner___bb10093866a127345ddfbcca3efa5022.png",
-      "maxWidth": "100%"
-    }
-  },
-
-  "info-card#rethink": {
-    "props": {
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/utensilios-cozinha-min.png",
-      "isFullModeStyle": true,
-      "headline": "Time to rethink your kitchen",
-      "callToActionText": "Discover",
-      "textPosition": "center"
-    }
-  },
-
-  //Responsive-layout (Definir layout para diferentes tamanhos de tela e dispositivos) 03
-  "responsive-layout.desktop#desktop": {
-    "children": ["rich-text#desktop", "image#desktop"]
-  },
-  
-  "responsive-layout.mobile#mobile": {
-    "children": ["rich-text#mobile", "image#mobile"]
-  },
-  
-  "rich-text#desktop": {
-    "props": {
-      "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection (I'm on desktop)",
-      "textPosition": "CENTER",
-      "textAlignment": "CENTER"
-    }
-  },
-  
-  "rich-text#mobile": {
-    "props": {
-      "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection (I'm on mobile)",
-      "textPosition": "CENTER",
-      "textAlignment": "CENTER"
-    }
-  },
-  "image#desktop": {
-    "props": {
-      "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Desktop.jpg?q=1",
-      "link": {
-        "url": "/small-appliances/coffee-makers"
-      } ,
-      "maxWidth":"100%",
-      "alt": "Coffee Makers Collection"
-    }
-  },
-  
-  "image#mobile": {
-    "props": {
-      "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Mobile.jpg?q=1",
-      "link": {
-        "url": "/small-appliances/coffee-makers"
-      } ,
-      "maxWidth":"100%",
-      "alt": "Coffee Makers Collection"
-    }
-  }, //
-//tab-layout (layout de abas) 03
-  "tab-layout#home":{
-    "children":["tab-list#home", "tab-content#home"]
-  },
-
-  "tab-list#home":{
-    "children":[
-    "tab-list.item#home1", "tab-list.item#home2"]
+  "tab-content": {
+    "children": [
+      "tab-content.item#home1",
+      "tab-content.item#home2",
+      "tab-content.item#home3",
+      "tab-content.item#home4",
+      "tab-content.item#home5"
+      ]
   },
 
   "tab-list.item#home1": {
     "props": {
-      "tabId": "majorAppliances",
-      "label": "Major Appliances",
-      "defaultActiveTab": true
+      "tabId": "promocao",
+      "label": "PROMOÇÃO"
     }
   },
 
   "tab-list.item#home2": {
     "props": {
-      "tabId": "electronics",
-      "label": "Electronics"
+      "tabId": "corinthians",
+      "label": "CORINTHIANS"
     }
   },
 
-  "tab-content#home": {
-    "children": ["tab-content.item#home1", "tab-content.item#home2"]
+  "tab-list.item#home3": {
+    "props": {
+      "tabId": "palmeiras",
+      "label": "PALMEIRAS"
+    }
+  },
+
+  "tab-list.item#home4": {
+    "props": {
+      "tabId": "signos",
+      "label": "SIGNOS"
+    }
+  },
+
+  "tab-list.item#home5": {
+    "props": {
+      "tabId": "guerreiros",
+      "label": "GUERREIROS"
+    }
   },
 
   "tab-content.item#home1": {
     "children": [
-      "rich-text#home1"
+      "search-result-layout.customQuery#home1"
     ],
     "props": {
-      "tabId": "majorAppliances"
+      "tabId": "promocao"
     }
   },
 
   "tab-content.item#home2": {
     "children": [
-      "rich-text#home2"
+      "search-result-layout.customQuery#home2"
     ],
     "props": {
-      "tabId": "electronics"
+      "tabId": "corinthians"
     }
   },
 
-  "rich-text#home1": {
-    "props": {
-      "text": "Área do conteúdo da tab-list.item com  tabId = majorAppliances",
-      "textPosition": "CENTER",
-      "font": "t-heading-3"
-    }
-  },
-  "rich-text#home2": {
-    "props": {
-      "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
-      "textPosition": "CENTER",
-      "font": "t-heading-3"
-    }
-  },
-  //modal layout e modal trigger 03
-  "modal-trigger#first": {
+
+  "tab-content.item#home3": {
     "children": [
-      "rich-text#trigger",
-      "modal-layout#first"
-    ]
-  },
-
-  "rich-text#trigger": {
+      "search-result-layout.customQuery#home3"
+    ],
     "props": {
-      "text": "CLICK ME"
-    }
-  },
-  "modal-layout#first": {
-    "children": [
-      "rich-text#hello"
-    ]
-  },
-
-  "rich-text#hello": {
-    "props": {
-      "text": "Hello Jaqueline"
-    }
-  },
-  //Quick View 03
-  "list-context.product-list": {
-    "blocks": ["product-summary.shelf#home2"],
-    "children": ["slider-layout"]
-  },
-
-  "product-summary.shelf#home2": {
-    "children": [
-      "modal-trigger#quickview2",
-      "product-summary-name",
-      "product-selling-price"
-    ]
-  },
-
-  "modal-trigger#quickview2": {
-    "children": [
-      "product-summary-image", 
-      "modal-layout#quickview2"
-    ]
- },
- 
- "modal-layout#quickview2": {
-   "children": [
-      "product-summary-name",
-      "product-images",
-      "product-summary-sku-selector",
-      "product-summary-quantity",
-      "add-to-cart-button"
-    ]
-  },
-//Stack layout (texto ou botão em cima da imagem)
-  "stack-layout#cta": {
-    "children": [
-      "image#cta",
-      "link#cta"
-    ]
-  },
-
-  "image#cta": {
-    "props": {
-      "blockClass": "cover",
-      "width": "100%",
-      "height": 400,
-      "src": "https://appliancetheme.vtexassets.com/assets/app/src/appliancecat___1b7592b49667c6a89203a0997e06bc87.jpg"
+      "tabId": "palmeiras"
     }
   },
 
-  "link#cta": {
+
+  "tab-content.item#home4": {
+    "children": [
+      "search-result-layout.customQuery#home4"
+    ],
     "props": {
-      "displayMode": "button",
-      "buttonProps": {
-        "variant": "primary",
-        "size": "large"
+      "tabId": "signos"
+    }
+  },
+
+  "tab-content.item#home5": {
+    "children": [
+      "search-result-layout.customQuery#home5"
+    ],
+    "props": {
+      "tabId": "guerreiros"
+    }
+  },
+
+//Banner
+  "slider-layout#banner": {
+    "props": {
+      "itemsPerPage": {
+        "desktop": 1,
+        "tablet": 1,
+        "phone": 1
       },
-      "href": "/washer",
-      "label": "Check these awesome discounts"
+      "blockClass": "carouselbanner",
+      "infinite": true,
+      "showNavigationArrows": false,
+      "autoplay":{
+        "timeout": 5000,
+        "stopOnHover": true
+      }
+    },
+    "children": ["image#1", "image#2"]
+  },
+
+  "image#1": {
+    "props": { 
+      "src":"assets/banner1.png"
+    }
+  },
+
+ "image#2": {
+    "props": {
+      "src":"assets/banner2.png"
     }
   }
 }
