--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -25,9 +25,12 @@
       "verticalAlign": "middle"
     },
     "children": [
+      "vtex.store-components:product-name",
+      "flex-layout.col#spacer",
       "product-identifier.product",
       "product-price",
       "flex-layout.row#qty-sku",
+      "shipping-simulator",
       "buy-button"
     ]
   },
@@ -37,8 +40,10 @@
       "showListPrice": true
     }
   },
+
   "flex-layout.row#qty-sku": {
     "children": [
+      "sku-selector",
       "product-quantity"
     ]
   }
